--- a/sistem/templates/Consultas/actualizar_consulta.html
+++ b/sistem/templates/Consultas/actualizar_consulta.html
@@ -1,4 +1,4 @@
-{% extends 'index.html' %}
+{% extends 'base.html' %}
 
 {% block title %} | Edicion de Consulta {{consulta.paciente.nombre}}{% endblock title %}
 {% block extrahead %}
@@ -8,25 +8,26 @@
 {% block content %}
 <div class="container">
     <div class="text-center">
+        <br><br>
         <h1>Editar consulta</h1>
+        <br>
     </div>
 </div>
-<br>
-<br>
+<br><br><br>
 {% load crispy_forms_tags %}
 <div class="container">
     <div class="row justify-content-center">
         <div class="col-md-8">
             <div class="card">
                 <div class="card-header">
-
+                    <h5>Numero: {{ consulta.idconsulta }}</h4>
                 </div>
                 <div class="card-body">
                     <form method="POST" enctype="multipart/form-data">
                         {% csrf_token %}
                         
                         {{ consultaform |crispy}}
-                        <div class="container1">
+                        <div class="content">
                             <button type="submit" class="btn btn-primary">Guardar</button>
                             <a class="btn btn-secondary" href="javascript:history.back()">Cancelar</a>
                         </div>
