--- a/sistem/templates/Consultas/consultas.html
+++ b/sistem/templates/Consultas/consultas.html
@@ -1,62 +1,85 @@
-{% extends 'index.html' %}
+{% extends 'base.html' %}
 
 {% block title %} | Consultas {% endblock title %}
 
 {% block content %}
 <div class="text-center">
+    <br><br>
         <h1>Consultas</h1>
 </div>
-<nav class="navbar bg-body-tertiary">
-    <div class="container-fluid">
-        <a class="btn btn-primary" href="/agregarconsulta/">Agregar</a>
-        <a class="btn btn-secondary" href="/consultas/">Restablecer</a>
-      <div class="d-flex">
-        <input class="form-control me-2" type="text" placeholder="Buscar paciente" aria-label="Search" name="consulta">
-        <button class="btn btn-outline-success" type="submit" onclick="buscar_consulta()">Buscar</button>
-      </div>
+<div class="content">
+    <div class="content2">
+        <div class="content3">
+            <a class="btn btn-primary" href="/agregarconsulta/">Agregar</a>
+        </div>
+        <div class="content4">
+            <a class="btn btn-secondary" href="/consultas/">Restablecer</a>
+        </div>
     </div>
-  </nav>
-    <table class="table table-bordered border-primary">
-        <thead>
-            <th>Numero</th>
-            <th>Fecha</th>
-            <th>Hora</th>
-            <th>Paciente</th>
-            <th>Observaciones</th>
-            <th>Precio</th>
-            <th>Acciones</th>
-        </thead>
-        <tbody>
-            {% for consulta in entity %}
-                <tr class="trconsulta">
-                    <td class="tdconsultaid">{{ consulta.idconsulta }}</td>
-                    <td class="tdconsulta">{{ consulta.fechaconsulta }}</td>
-                    <td class="tdconsulta">{{ consulta.horaconsulta }}</td>
-                    <td class="tdconsulta">{{ consulta.paciente.nombre}}</td>
-                    <td class="tdconsultaobrservaciones">{{ consulta.observaciones }}</td>  
-                    <td class="tdconsulta">{{ consulta.precioconsulta }}</td>
-                    <td class="tdconsultaedit">
-                        <a class="btn btn-secondary" href="/editarconsulta/{{consulta.idconsulta}}/">Editar</a>
-                       
-                        <button type="button" class="btn btn-danger" onclick="eliminarregistro(
-                            id = '{{ consulta.idconsulta}}', 
-                            objeto='consulta',
-                            objeto2='{{consulta.fechaconsulta}}'
-                            )">Eliminar</a>
+    <div class="content2">
+        <div class="content5">
+            <input class="form-control me-2" type="text" placeholder="Ingrese un nombre" aria-label="Search" name="consulta">
+        </div>
+        <div class="content6">
+            <button class="btn btn-outline-success" type="submit" onclick="buscar_consulta()">Buscar</button>
 
-                    </td>
-                </tr>
-            {% endfor %}
-        </tbody>
-    </table>
-    {% include "paginacion.html" %}
+        </div>
+    </div>
+</div>
+
+<div class="container">
+    <div class="tbl_container">
+        <br>
+        <table class="tbl">
+            <thead>
+                <th>Numero</th>
+                <th>Fecha</th>
+                <th>Hora</th>
+                <th>Paciente</th>
+                <th>Observaciones</th>
+                <th>Precio</th>
+                <th>Acciones</th>
+            </thead>
+            <tbody>
+                {% for consulta in entity %}
+                    <tr>
+                        <td data-lable="Numero:">{{ consulta.idconsulta }}</td>
+                        <td data-lable="Fecha:">{{ consulta.fechaconsulta }}</td>
+                        <td data-lable="Hora:">{{ consulta.horaconsulta }}</td>
+                        <td data-lable="Paciente:">{{ consulta.paciente.nombre|truncatechars:20}}</td>
+                        <td data-lable="Obs:">{{ consulta.observaciones|truncatechars:30  }}</td>  
+                        <td data-lable="Cobro:">${{ consulta.precioconsulta }}</td>
+                        <td class="centrado2">
+                            <a class="btn btn-secondary" href="/editarconsulta/{{consulta.idconsulta}}/">Editar</a>
+                           
+                            <button type="button" class="btn btn-danger" onclick="eliminarregistro(
+                                id = '{{ consulta.idconsulta}}', 
+                                objeto='consulta',
+                                objeto2='{{consulta.fechaconsulta}}'
+                                )">Eliminar</a> 
+    
+                        </td>
+                    </tr>
+                {% endfor %}
+            </tbody>
+        </table>
+        <br>
+        {% include "paginacion.html" %}
+    </div>
+</div>
+
     {% if mensaje == 1 %}
     <script>
         swal({
-			title: "!No encontrado!",
-			text: "No existe ese Paciente",
-			timer: 2000,
-			showConfirmButton: false});
+            title: "!Dato no encontrado!",
+            text: "No existe ese paciente!",
+            icon: "info",
+        })
+        .then((willDelete) => {
+            if (willDelete) { 
+                location.href = "/consultas/"
+            } 
+        });
     </script>
     {% else %}
         {% if  mensaje == 2 %}
