--- a/sistem/templates/estadisticas.html
+++ b/sistem/templates/estadisticas.html
@@ -1,40 +1,35 @@
-{% extends 'index.html' %}
+{% extends 'base.html' %}
 
 {% block title %} | Estadisticas {% endblock title %}
 
 {% block content %}
-<br>
 <div class="text-center">
+  <br><br>
   <h1>Estadisticas</h1>
-</div>
-<br>
-<nav class="navbar bg-body-tertiary">
-  <div class="container-fluid">
-     
-  </div>
-</nav>
 
-<div class="conteiner_esta_1">
-  <div class="conteiner_estad_3">
-    <div class="conteiner_estad_2">
-      <h2>Datos por mes</h2>
-      <h4>Mes:{{ mesactual }}</h4>
-      <h4>Citas: {{ citasmes }} </h4>
-      <h4>Consultas: {{ consultasmes }} </h4>
-      <h4>Devengado: ${{ devengadomes }} </h4>
+</div>
+<div class="container_1">
+  <div class="conteiner_estad_2">
+    <h2>Datos Ramdom</h2>
+    <h4>Ramdom</h3>
   </div>
+</div>
+
+<div class="container_1">
+  <div class="conteiner_estad_2">
+    <h2>Datos por mes</h2>
+    <h4>Mes:{{ mesactual }}</h4>
+    <h4>Citas: {{ citasmes }} </h4>
+    <h4>Consultas: {{ consultasmes }} </h4>
+    <h4>Devengado: ${{ devengadomes }} </h4>
+  </div>
+
   <div class="conteiner_estad_2">
     <h2>Datos por año</h2>
     <h4>Año:{{ year }}</h4>
     <h4>Citas: {{ citasanio }} </h4>
     <h4>Consultas: {{ consultasanio}} </h4>
     <h4>Devengado: ${{ devengadoanio}} </h4>
-  </div>
-</div>
-<div class="conteiner_estad_3">
-  <div class="conteiner_estad_2">
-    <h2>Datos Ramdom</h2>
-    <h4>Ramdom</h3>
   </div>
   <div class="conteiner_estad_2">
     <h2>Conteo General</h2>
@@ -46,13 +41,5 @@
     <h4>Consultas por Patologia: {{ consultaspat }} </h4>
   </div>
 </div>
-</div>
-<div class="contenedorE">
- 
-  
-  
-</div>
-<class class="container">
-  
-</class>
+
 {% endblock content %}
