--- a/sistem/templates/Consultas/crear_consulta.html
+++ b/sistem/templates/Consultas/crear_consulta.html
@@ -1,4 +1,4 @@
-{% extends 'index.html' %}
+{% extends 'base.html' %}
 
 {% block title %} | Registro de Consulta {% endblock title %}
 {% block extrahead %}
@@ -7,11 +7,11 @@
 {% block content %}
 <div class="container">
     <div class="text-center">
+        <br><br>
         <h1>Agregar consulta</h1>
+        <br>
     </div>
 </div>
-<br>
-<br>
 {% load crispy_forms_tags %} 
 <div class="container">
     <div class="row justify-content-center">
@@ -26,7 +26,7 @@
 
                         {{ ConsultaForm |crispy}}
                        
-                        <div class="container1">
+                        <div class="content">
                             <button type="submit" class="btn btn-primary">Guardar</button>
                             <a class="btn btn-secondary" href="javascript:history.back()">Cancelar</a>
                         </div>
