--- a/sistem/templates/Pacientes/actualizar_paciente.html
+++ b/sistem/templates/Pacientes/actualizar_paciente.html
@@ -1,4 +1,4 @@
-{% extends 'index.html' %}
+{% extends 'base.html' %}
 
 {% block title %} | Edicion de Paciente {{paciente.nombre}}{% endblock title %}
 {% block extrahead %}
@@ -6,19 +6,21 @@
 {% endblock %}
 
 {% block content %}
+
 <div class="container">
     <div class="text-center">
+        <br><br>
         <h1>Editar paciente</h1>
+        
     </div>
 </div>
-<br>
 {% load crispy_forms_tags %}
 <div class="container">
     <div class="row justify-content-center">
         <div class="col-md-8">
             <div class="card">
                 <div class="card-header">
-
+                    <h5>Numero: {{ paciente.idpaciente }}</h4>
                 </div>
                 <div class="card-body">
                     <form method="POST" enctype="multipart/form-data">
@@ -26,7 +28,7 @@
 
                         {{ pacienteform |crispy}}
                        
-                        <div class="container1">
+                        <div class="content">
                             <button type="submit" class="btn btn-primary">Guardar</button>
                             <a class="btn btn-secondary" href="javascript:history.back()">Cancelar</a>
                         </div>
