--- a/sistem/templates/Pacientes/crear_paciente.html
+++ b/sistem/templates/Pacientes/crear_paciente.html
@@ -1,8 +1,6 @@
-{% extends 'index.html' %}
+{% extends 'base.html' %}
 
 {% block title %} | Registro de Paciente {% endblock title %}
-
-
 {% block extrahead %}
 {{ PacienteForm.media }}
 {% endblock %}
@@ -10,10 +8,11 @@
 {% block content %}
 <div class="container">
     <div class="text-center">
+        <br><br>
         <h1>Agregar paciente</h1>
+        
     </div>
 </div>
-<br>
 {% load crispy_forms_tags %}  
 <div class="container">
     <div class="row justify-content-center">
@@ -28,7 +27,7 @@
 
                         {{ PacienteForm |crispy}}
                        
-                        <div class="container1">
+                        <div class="content">
                             <button type="submit" class="btn btn-primary">Guardar</button>
                             <a class="btn btn-secondary" href="javascript:history.back()">Cancelar</a>
                         </div>
