--- a/sistem/templates/Pacientes/pacientes.html
+++ b/sistem/templates/Pacientes/pacientes.html
@@ -4,33 +4,44 @@
 
 {% block content %}
 <div class="text-center">
+    <br><br>
     <h1>Pacientes</h1>
 </div>
-<nav class="navbar bg-body-tertiary">
-    <div class="container-fluid">
-        <a class="btn btn-primary" href="/agregarpaciente/">Agregar</a>
-        <a class="btn btn-secondary" href="/pacientes/">Restablecer</a>
-      <div class="d-flex" >
-        <input class="form-control me-2" type="text" placeholder="Ingrese un nombre" aria-label="Search" name="nombre">
-        <button class="btn btn-outline-success"  onclick="buscar_paciente()">Buscar</button>
-      </div>
+<div class="content">
+    <div class="content2">
+        <div class="content3">
+            <a class="btn btn-primary" href="/agregarpaciente/">Agregar</a>
+        </div>
+        <div class="content4">
+            <a class="btn btn-secondary" href="/pacientes/">Restablecer</a>
+        </div>
     </div>
-  </nav>
+    <div class="content2">
+        <div class="content5">
+            <input class="form-control me-2" type="text" placeholder="Ingrese un nombre" aria-label="Search" name="nombre" >
+        </div>
+        <div class="content6">
+            <button class="btn btn-outline-success"  onclick="buscar_paciente()">Buscar</button>
+        </div>
+    </div>
+</div>
 
-
-    <table class="table table-bordered border-primary">
-        <thead>
-            <th style="width: 500px;" >Nombre</th>
-            <th style="text-align: center;">Fecha Nacimiento</th>
-            <th>Telefono</th>
-            <th style="text-align: center;">Opciones</th>
-        </thead>
-        <tbody>
+<div class="container">
+    <div class="tbl_container">
+        <br>
+        <table class="tbl">
+            <thead>
+                <th>Nombre</th>
+                <th>Fecha nacimiento</th>
+                <th>Telefono</th>
+                <th>Acciones</th>
+            </thead>
+            <tbody>
             {% for paciente in entity %}
                 <tr>
-                    <td>{{ paciente.nombre }}</td>
-                    <td style="text-align: center;">{{ paciente.fecha_nacimiento }}</td>
-                    <td>{{ paciente.telefono}}</td>
+                    <td data-lable="Nombre:">{{ paciente.nombre }}</td>
+                    <td data-lable="Fecha nac:">{{ paciente.fecha_nacimiento }}</td>
+                    <td data-lable="Telefono:">{{ paciente.telefono}}</td>
                     <td class="centrado2">
                         <a class="btn btn-secondary" href="/editarpaciente/{{paciente.idpaciente}}/">Editar</a>
                         <button type="button" class="btn btn-danger" onclick="eliminarregistro(
@@ -44,15 +55,24 @@
             {% endfor %}
         </tbody>
     </table>
+    <br>
     {% include "paginacion.html" %}
+    </div>
+</div>
+
 
     {% if mensaje == 1 %}
     <script>
         swal({
-			title: "!No encontrado!",
-			text: "No existe ese Paciente",
-			timer: 2000,
-			showConfirmButton: false});
+            title: "!Dato no encontrado!",
+            text: "No existe ese paciente!",
+            icon: "info",
+        })
+        .then((willDelete) => {
+            if (willDelete) { 
+                location.href = "/pacientes/"
+            } 
+        });
     </script>
     {% else %}
         {% if  mensaje == 2 %}
