--- a/sistem/templates/citas/crear_cita.html
+++ b/sistem/templates/citas/crear_cita.html
@@ -1,4 +1,4 @@
-{% extends 'index.html' %}
+{% extends 'base.html' %}
 
 {% block title %} | Registro de Cita {% endblock title %}
 
@@ -9,10 +9,10 @@
 {% block content %}
 <div class="container">
     <div class="text-center">
+        <br><br>
         <h1>Agregar cita</h1>
     </div>
 </div>
-<br>
 {% load crispy_forms_tags %}
 <div class="container">
     <div class="row justify-content-center">
@@ -27,9 +27,9 @@
 
                         {{ CitaForm |crispy}}
                        
-                        <div class="container1">
+                        <div class="content">
                             <button type="submit" class="btn btn-primary">Guardar</button>
-                            <a class="btn btn-secondary" href="/citas/">Cancelar</a>
+                            <a class="btn btn-secondary" href="javascript:history.back()">Cancelar</a>
                         </div>
                     </form>
                 </div>
