--- a/sistem/templates/index.html
+++ b/sistem/templates/index.html
@@ -1,170 +1,40 @@
-{% load static %}
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Physio {% block title %}  {% endblock title %} </title>
-    <!-- Boostrap 5.3 CSS-->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" 
-    rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" 
-    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-    
-    <!--SWEET ALERT -->
-    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+{% extends 'base.html' %}
 
-    <!-- Vinculación de fuentes de Google para iconos -->
-    <link rel= "stylesheet" 
-    href = "https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@24,400,0,0" > 
+{% block title %} | Consultas {% endblock title %}
 
-    <!--Archivos estaticos CSS y JavaScript-->
-    <link rel="stylesheet" href="/static/style.css" >
-    <script src="//code.jquery.com/jquery.min.js"></script>
-    <script src="{% static 'script.js' %}"></script>
-</head>
-<body>
-    <aside class="sidebar">
-      <!-- Sidebar header -->
-      <header class="sidebar-header">
-        <a href="#" class="header-logo">
-          <img src="../../../../static/images/logo.png" alt="CodingNepal">
-        </a>
-        <button class="toggler sidebar-toggler">
-          <span class="material-symbols-rounded">chevron_left</span>
-        </button>
-        <button class="toggler menu-toggler">
-          <span class="material-symbols-rounded">menu</span>
-        </button>
-      </header>
-
-
-      <nav class="sidebar-nav">
-        <!-- Primary top nav -->
-
-        <ul class="nav-list primary-nav">
-
-          <li class="nav-item">
-            <a href="/" class="nav-link">
-              <span class="nav-icon material-symbols-rounded">dashboard</span>
-              <span class="nav-label">Inicio</span>
-            </a>
-            <span class="nav-tooltip">Inicio</span>
-          </li>
-          
-          <li class="nav-item">
-            <a href="/pacientes/" class="nav-link">
-                <span class="nav-icon material-symbols-rounded">group</span>
-              <span class="nav-label">Pacientes</span>
-            </a>
-            <span class="nav-tooltip">Pacientes</span>
-          </li>
-
-          <li class="nav-item">
-            <a href="/citas/" class="nav-link">
-              <span class="nav-icon material-symbols-rounded">calendar_today</span>
-              <span class="nav-label">Citas</span>
-            </a>
-            <span class="nav-tooltip">Citas</span>
-          </li>
-
-          <li class="nav-item">
-            <a href="/consultas/" class="nav-link">
-              <span class="nav-icon material-symbols-rounded">edit_note</span>
-              <span class="nav-label">Consultas</span>
-            </a>
-            <span class="nav-tooltip">Consultas</span>
-          </li>
-
-          <li class="nav-item">
-            <a href="/estadisticas/" class="nav-link">
-              <span class="nav-icon material-symbols-rounded">insert_chart</span>
-              <span class="nav-label">Estadisticas</span>
-            </a>
-            <span class="nav-tooltip">Estadisticas</span>
-          </li>
-
-          <li class="nav-item">
-            <a href="#" class="nav-link">
-              <span class="nav-icon material-symbols-rounded">fitness_center</span>
-              <span class="nav-label">Ejercicios</span>
-            </a>
-            <span class="nav-tooltip">Ejercicios</span>
-          </li>
-
-          <li class="nav-item">
-            <a href="#" class="nav-link">
-              <span class="nav-icon material-symbols-rounded">settings</span>
-              <span class="nav-label">Settings</span>
-            </a>
-            <span class="nav-tooltip">Settings</span>
-          </li>
-
-        </ul>
-        <!-- Secondary bottom nav -->
-        <ul class="nav-list secondary-nav">
-          <li class="nav-item">
-            <a class="nav-link">
-              <span class="nav-icon material-symbols-rounded">account_circle</span>
-              <span class="nav-label">@{{user.username}}</span>
-            </a>
-            <span class="nav-tooltip">@{{user.username}}</span>
-          </li>
-          <li class="nav-item">
-            <a href="{% url 'logout' %}" class="nav-link">
-              <span class="nav-icon material-symbols-rounded">logout</span>
-              <span class="nav-label">Logout</span>
-            </a>
-            <span class="nav-tooltip">Logout</span>
-          </li>
-        </ul>
-      </nav>
-    </aside>
-    <div class="content">
-        <div class="container">
-            <div class="row">
-                <div class="col-12">
-                  <br>
-                  {% block content %}
-                  {% endblock content %}
-
-                </div>
-            </div>
-       </div>
-    </div>
+{% block content %}
+<div class="text-center">
+    <br><br>
+        <h1>System</h1>
+</div>
+<d class="container_home_buttons">
+  <a class="btn btn-outline-success" href="/agregarpaciente/">Agregar paciente</a>
+  <a class="btn btn-outline-success" href="/agregarcita/">Agregar cita</a>
+  <a class="btn btn-outline-success" href="/agregarconsulta/">Agregar consulta</a>
   
-    <!-- Script -->
-    <script>
-        const sidebar = document.querySelector(".sidebar");
-        const sidebarToggler = document.querySelector(".sidebar-toggler");
-        const menuToggler = document.querySelector(".menu-toggler");
-        // Ensure these heights match the CSS sidebar height values
-        let collapsedSidebarHeight = "56px"; // Height in mobile view (collapsed)
-        let fullSidebarHeight = "calc(100vh - 32px)"; // Height in larger screen
-        // Toggle sidebar's collapsed state
-        sidebarToggler.addEventListener("click", () => {
-        sidebar.classList.toggle("collapsed");
-        });
-        // Update sidebar height and menu toggle text
-        const toggleMenu = (isMenuActive) => {
-        sidebar.style.height = isMenuActive ? `${sidebar.scrollHeight}px` : collapsedSidebarHeight;
-        menuToggler.querySelector("span").innerText = isMenuActive ? "close" : "menu";
-        }
-        // Toggle menu-active class and adjust height
-        menuToggler.addEventListener("click", () => {
-        toggleMenu(sidebar.classList.toggle("menu-active"));
-        });
-        // (Optional code): Adjust sidebar height on window resize
-        window.addEventListener("resize", () => {
-        if (window.innerWidth >= 1024) {
-            sidebar.style.height = fullSidebarHeight;
-        } else {
-            sidebar.classList.remove("collapsed");
-            sidebar.style.height = "auto";
-            toggleMenu(sidebar.classList.contains("menu-active"));
-        }
-        });
-        window.onload = $(".toggler").click();
-    </script>
-</body>
-</html>
+    <input class="form-control me-2" type="text" placeholder="Ingrese un nombre" aria-label="Search" name="consulta">
+
+    <button class="btn btn-outline-success" type="submit" onclick="buscar_consulta()">Buscar</button>
+
+
+</div>
+<div class="container_home">
+  <div class="container_estad_2">
+    <h4>Proxima cita</h4>
+    {% for cita in proximacita %}
+    <h4>Paciente:  {{cita.paciente.nombre}}</h4>
+    <h4>Hora:  {{cita.horacita}}</h4>
+    {% endfor %}
+  </div>
+  <div class="container_estad_2">
+    <h4>Citas: {{citashoy}} </h4> 
+  </div>
+  <div class="container_estad_2">
+    <h4>Consultas: {{consultashoy}} </h4>
+  </div>
+  <div class="container_estad_2">
+    <h4>Devengado:${{devengadohoy}}  </h4>
+  </div>
+</div>
+
+{% endblock content %}>
